stick timestamps to the top right to avoid weird wrapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,10 @@
 }
 
 #logfile-list .date {
-  float: right;
-  font-size: 11px;
-  margin-top: 3px;
+  font-size: 10px;
+  position: absolute;
+  right: 6px;
+  top: 2px;
 }
 
 #tail {
